issue-36: Create branch 11.0.0 - Source/Target compatibility bumped to 1.9 - Core can be used as dependency on any project with Java 9, 10, 11 - Sampler runs standalone in JDK: 9, 10, 11 - Added Launcher class to Sampler to allow running via shadow jar - Remove private API